[package]
name = "goker-ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
futures-util = "0.3.31"
async-trait = "0.1.89"
bigdecimal = { version = "0.4.10", features = ["serde"] }
